Found issue causing spacing errors
It was an extra div I added into the html thinking it would be easier
that way

But all it did was cause problems trying to figure out the sizing of
everything

Fixed now though

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,11 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-* {
-  padding: none;
-  margin: none;
-  box-sizing: border-box;
-}
-
 body {
   height: 100vh;
   margin: 0;
@@ -38,53 +32,38 @@ body {
   flex-direction: column;
 }
 
-.header {
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  gap: 14px;
+}
+
+.header,
+.footer {
   display: flex;
   justify-content: space-between;
-  height: 10vh;
+  padding: 15px;
 }
 
 ul {
   list-style: none;
+  display: flex;
+  padding: 0;
+  gap: 16px;
+  margin: 0;
 }
 
 a {
   text-decoration: none;
   color: black;
 }
-
-.left-links,
-.right-links {
-  display: flex;
-  gap: 10px;
-  margin-right: 40px;
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 14px;
-  height: 80vh;
-}
-
-.buttons {
-  display: flex;
-  gap: 12px;
-  font-weight: bold;
-}
-
 button {
-  padding: 10px;
+  padding: 10px 15px;
 }
 
 .footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 10vh;
   background-color: #eeeeee;
-  padding-right: 40px;
-  padding: 16px;
 }
